Bug 579264. Ensure that ApplyRenderingChangeToTree repaints popup descendants of the frame. r=bz